--- a/Basic/Express/views/index.ejs
+++ b/Basic/Express/views/index.ejs
@@ -11,6 +11,27 @@
     str: <%= str %><br/>
     number: <%= number %><br/>
     date: <%= date %><br/>
+
     <a href="test">test</a><br/>
+    <a href="parameter?data1=aaa&data2=bbb">parameter</a>
+
+    <form action="parameter" method="get">
+        data1: <input type="text" name="data1"/>
+        data2: <input type="text" name="data2"/>
+        <button type="submit">Submit</button>
+    </form>
+    <hr/>
+    <form action="parameter" method="post">
+        data1: <input type="text" name="data1"/>
+        data2: <input type="text" name="data2"/>
+        <button type="submit">Submit</button>
+    </form>
+    <hr/>
+    <a href="save_cookie">Save Cookie</a><br/>
+    <a href="load_cookie">Load Cookie</a><br/>
+    <hr/>
+    <a href="save_session">Save Session</a><br/>
+    <a href="load_session">Load Session</a><br/>
+    <hr/>
 </body>
 </html>
